fix navbar z index and wrap up text

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -128,6 +128,7 @@
     }
 
     .portfolio__navbar-menu_container {
+        z-index: 10000;
         top: 20px;
     }
 
